--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/node": "^18.14.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "seedrandom": "^3.0.5",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/seedrandom": "^0.3.3",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
