Package and config changes
Added needed packages for unittesting
and tsconfig changes to allow tests to exist outside the src folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,16 @@
     "experimentalDecorators": true,
     "target": "ES6",
     "module": "CommonJS",
-    "rootDir": "./src",
+    "rootDir": "./",
     "outDir": "./prod",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "tests",
+    "src"
+  ]
 }
