--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./prod/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node -r dotenv/config ./prod/index.js"
+    "start": "node -r dotenv/config ./prod/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
